# stobox-telegram-bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT-REPORT.md  DEPLOY.md  Dockerfile  Makefile  Procfile  README.md  ROADMAP.md  SETUP.md  SUBPROCESSORS.md  SYSTEM-PROMPT.md  VERIFICATION.md  canonicals.yaml  docker-compose.yml  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml
config/: config.yaml
config/prompts/: answer_synthesis.yaml  community_reply.yaml  de_escalation.yaml  evangelist_content.yaml  faq_generation.yaml  intent_router.yaml  lead_qualification.yaml  moderation.yaml  system_base.yaml
deploy/: stobox-v15-reingest.yml
docs/: community-qa.md  compass-product.md  erc3643-rwa.md  legacy-platforms.md  stbu-token.md  stobox-intelligence.md  stobox-platform.md  stobox-raisable.md  stoby-guide.html
evals/: dataset.jsonl  golden.yaml  run_evals.py  run_golden.py
examples/: web-widget.html
scripts/: pull_community_qa.py  run_discord.py  set_identity.py
src/stobox_ai/: __init__.py  __main__.py  config.py  logging.py  preflight.py  prompts.py  util.py
src/stobox_ai/agents/: __init__.py  confidence.py  router.py
src/stobox_ai/analytics/: __init__.py  logger.py
src/stobox_ai/chain/: __init__.py  wallet.py
src/stobox_ai/channels/: __init__.py  base.py
src/stobox_ai/content/: __init__.py  flywheel.py
src/stobox_ai/core/: __init__.py  engine.py  types.py
tests/: conftest.py  test_addressing.py  test_agents.py  test_ama.py  test_axis.py  test_blog_announce.py  test_channels.py  test_dashboard.py  test_deleted_accounts.py  test_email.py  test_engagement.py  test_engine.py  test_flywheel.py  test_freshness_stale.py  test_fud_alarm.py  test_golden.py  test_growth.py  test_guardrails.py  test_insights.py  test_knowledge.py  test_market.py  test_matcher.py  test_message_log.py  test_migration_countdown.py  test_milestones.py  test_moderation.py  test_ops.py  test_p1_hardening.py  test_p2_ops.py  test_proactive_engagement.py  test_qa_loop.py  test_qualifier.py  test_retention.py  test_revival_blog.py  test_router.py  test_sources.py  test_state_mirror.py  test_statefile.py  test_subscriptions.py  test_telegram_adapter.py  (+5 more)
(+70 files in other folders)
