[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stobox-ai"
version = "0.1.0"
description = "Enterprise AI Telegram Community Manager for Stobox — a channel-agnostic RAG agent platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Stobox" }]

dependencies = [
  # --- Core config / runtime ---
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "structlog>=24.1",
  "tenacity>=8.2",
  "python-dotenv>=1.0",

  # --- LLM providers (provider-abstracted; both optional at runtime) ---
  "anthropic>=0.39",
  "openai>=1.40",
  "tiktoken>=0.7",

  # --- Knowledge / RAG ---
  "numpy>=1.26",
  "rank-bm25>=0.2.2",
  "pypdf>=4.2",
  "python-docx>=1.1",
  "markdown-it-py>=3.0",
  "beautifulsoup4>=4.12",
  "watchdog>=4.0",

  # --- Storage ---
  "psycopg[binary,pool]>=3.1",
  "pgvector>=0.3",

  # --- Channels ---
  "python-telegram-bot>=21.0",
  "langdetect>=1.0.9",

  # --- Remote knowledge sync (web crawl + GitHub ingestion) ---
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]
# Web chat widget backend / HTTP API channel.
web = [
  "starlette>=0.37",
  "uvicorn>=0.30",
]
# Discord channel adapter.
discord = [
  "discord.py>=2.3",
]
# Lead handoff to a CRM webhook.
crm = [
  "httpx>=0.27",
]

[project.scripts]
stobox-bot = "stobox_ai.__main__:main"
stobox-web = "stobox_ai.channels.web.adapter:main"
stobox-doctor = "stobox_ai.preflight:main"
stobox-ingest = "stobox_ai.knowledge.ingest:cli"
stobox-sync = "stobox_ai.knowledge.sync:cli"
stobox-eval = "evals.run_evals:main"
stobox-golden = "evals.run_golden:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stobox_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: we deliberately use `str, Enum` mixins (JSON/value comparisons rely on it).
ignore = ["E501", "UP042"]
